# LiveMix

./: AUTHORS  COPYING  ChangeLog  INSTALL  README  TODO  VERSION  all.pro  configure  configure.ac  copysrc  default.lm  features.pri  features.pri.in  livemix.qrc  mkbin  mkdeb  mkdebsrc  mkrelease  mksrc  mr  reformat_sources.sh  run  test.lm
backend/: backend.cpp  backend.h  backend.pro  channels.cpp  channels.h  db.cpp  db.h  effects.cpp  effects.h  guiserver_interface.h  ladspa_fx.cpp  ladspa_fx.h  qlash.cpp  qlash.h  types.h
bakend/: backend.h  globals.h
core/: Effects.h  LadspaFX.h  backend.cpp  backend.h  core.pro  db.cpp  db.h  effects.cpp  ladspa_fx.cpp
data/: application-x-livemix.xpm
debian/: changelog  control  copyright  docs  files  livemix-16.xpm  livemix.applications  livemix.desktop  livemix.install  livemix.menu  livemix.mime  livemix.postinst  livemix.sgml  livemix.sharedmimeinfo  livemix.xpm  package.sharedmimeinfo  rules  watch
gui/: AssigneToPannel.cpp  AssigneToPannel.h  ChannelsWidgets.cpp  ChannelsWidgets.h  KeyDo.cpp  KeyDo.h  Wrapp.cpp  Wrapp.h  channelselector.cpp  channelselector.h  graphicalguiserver.cpp  graphicalguiserver.h  gui.pro  mixingmatrix.cpp  mixingmatrix.cpp.old  mixingmatrix.h  mixingmatrix.h.old
i18n/: livemix.fr.qm  livemix.fr.ts  livemix_fr.ts  stats.py  updateTranslations.sh
ladspafx/: LadspaFXProperties.cpp  LadspaFXProperties.h  LadspaFXSelector.cpp  LadspaFXSelector.h  LadspaFXSelector_UI.ui  ladspafx.pro
livemix/: COPYING  ChangeLog  NEWS  TODO  configure  features.pri  mkdeb  reformat_sources.sh
(+64 files in other folders)
